--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,10 @@
             <artifactId>handlebars</artifactId>
             <version>4.1.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
